Hadoop HDFS Change Log

Release 2.8.0 - UNRELEASED

  NEW FEATURES
    HDFS-7278. Add a command that allows sysadmins to manually trigger full
    block reports from a DN (cmccabe)

    HDFS-8969. Clean up findbugs warnings for HDFS-8823 and HDFS-8932.
    Contributed by Anu Engineer.

    HDFS-8932. NPE thrown in NameNode when try to get TotalSyncCount metric
    before editLogStream initialization. Contributed by Surendra Singh Lilhore

    HDFS-8911. NameNode Metric : Add Editlog counters as a JMX metric.
    (Contributed by Anu Engineer)

    HDFS-6982. nntop: top­-like tool for name node users.
    (Maysam Yabandeh via wang)

    HDFS-6663. Admin command to track file and locations from block id.
    (Chen He via kihwal)

    HDFS-8155. Support OAuth2 in WebHDFS. (jghoman)

  IMPROVEMENTS

    HDFS-8549. Abort the balancer if an upgrade is in progress. (wang)

    HDFS-8818. Changes the global moveExecutor to per datanode executors and
    changes MAX_SIZE_TO_MOVE to be configurable.  (szetszwo)

    HDFS-8824. Do not use small blocks for balancing the cluster.  (szetszwo)

    HDFS-8883. NameNode Metrics : Add FSNameSystem lock Queue Length.
    (Anu Engineer via xyao)

    HDFS-8880. NameNode metrics logging. (Arpit Agarwal)

    HDFS-4396. Add START_MSG/SHUTDOWN_MSG for ZKFC
    (Liang Xie via harsh)

    HDFS-7608: hdfs dfsclient newConnectedPeer has no write
    timeout (Xiaoyu Yao via Colin P. McCabe)

    HDFS-7928. Scanning blocks from disk during rolling upgrade startup takes
    a lot of time if disks are busy. Contributed by Rushabh Shah.

    HDFS-7933. fsck should also report decommissioning replicas.
    (Xiaoyu Yao via cnauroth)

    HDFS-8278. When computing max-size-to-move in Balancer, count only the
    storage with remaining >= default block size.  (szetszwo)

    HDFS-8826. In Balancer, add an option to specify the source node list
    so that balancer only selects blocks to move from those nodes.  (szetszwo)
