@@ -6,6 +6,8 @@ Release 2.8.0 - UNRELEASED
     HDFS-7278. Add a command that allows sysadmins to manually trigger full
     block reports from a DN (cmccabe)
 
+    HDFS-8965. Harden edit log reading code against out of memory errors (cmccabe)
+
     HDFS-8969. Clean up findbugs warnings for HDFS-8823 and HDFS-8932.
     Contributed by Anu Engineer.
 
